3rd Assignment Second Push

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,11 +11,12 @@
       </ul>
       <ul>
         <ul class="nav navbar-nav navbar-right">
-          <li class="dropdown">
+          <li class="dropdown" appDropDown>
             <a href="#" class="dropdown-toggle" role="button">Users<span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#">User1</a></li>
-              <li><a href="#">User2</a></li>
+              <li><a href="#">Login</a></li>
+              <li><a href="#">Other</a></li>
+              <li><a href="#">Logout</a></li>
             </ul>
           </li>
         </ul>
