Final complete Push - 3rd Assignment

--- a/src/app/documents/document-list/document-list.component.html
+++ b/src/app/documents/document-list/document-list.component.html
@@ -8,10 +8,9 @@
     </div>
     <div class="panel-body">
       <div class="center-panel">
-        <app-document-item 
-        *ngFor="let documentEl of documents"
+        <app-document-item *ngFor="let documentEl of documents"
         [document]="documentEl"
-        (DocumentSelected)="onDocumentSelected(documentEl)"></app-document-item>
+        (documentSelected)="onDocumentSelected(documentEl)"></app-document-item>
       </div>
     </div>
   </div>
