--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,7 +16,9 @@
             <ul class="dropdown-menu">
               <li><a href="#">Login</a></li>
               <li><a href="#">Other</a></li>
+              <div style="margin-left:15px">
               <li><a href="#">Logout</a></li>
+            </div>
             </ul>
           </li>
         </ul>
