--- a/src/app/documents/documents.component.html
+++ b/src/app/documents/documents.component.html
@@ -1,14 +1,11 @@
 <div class="row">
   <div class="col-md-5">
     <app-document-list
-    (selectedDocumentEvent)="selectedDocument = $event"></app-document-list>
+    (documentWasSelected)="selectedDocument = $event"></app-document-list>
   </div>
   <div class="col-md-4">
     <app-document-detail
     *ngIf="selectedDocument; else infoText"
     [document]="selectedDocument"></app-document-detail>
-    <ng-template #infoText>
-        <p>Select a Document</p>
-      </ng-template>
   </div>
 </div>
