--- a/src/app/documents/document-detail/document-detail.component.html
+++ b/src/app/documents/document-detail/document-detail.component.html
@@ -1,12 +1,12 @@
 
-<div class="panel panel-default" xmlns="http://www.w3.org/1999/html">
+<div class="panel panel-default" style="width:400px" xmlns="http://www.w3.org/1999/html">
   <div class="panel-heading">
     <div class="row pad-all">
       <h4 class="title margin-left-right"> {{ document.name }} </h4>
       <div class="row pull-right margin-left-right">
         <a class="btn btn-primary">View</a>
-        <a class="btn btn-info" >Edit</a>
-        <a class="btn btn-danger">Delete</a>
+        <a class="btn btn-info" style="margin-left:10px">Edit</a>
+        <a class="btn btn-danger" style="margin-left:10px">Delete</a>
       </div>
     </div>
   </div>
