--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -11,8 +11,7 @@
       <div class="row">
         <div class="col-xs-12">
            <app-contact-item *ngFor="let contactEl of contacts" 
-           [contact]="contactEl"
-           (contactSelected)="onContactSelected(contactEl)"></app-contact-item>
+           [contact]="contactEl"></app-contact-item>
         </div>
       </div>
     </div>
