--- a/src/app/documents/document-item/document-item.component.html
+++ b/src/app/documents/document-item/document-item.component.html
@@ -1,5 +1,4 @@
-<a 
-class="list-group-item clearfix documentDiv" 
-(click)="onSelected()">
+<div routerLinkActive="active"><a [routerLink]="[index]" 
+class="list-group-item clearfix documentDiv">
   {{ document.name }}
-</a>
+</a></div>
