--- a/src/app/documents/document-detail/document-detail.component.html
+++ b/src/app/documents/document-detail/document-detail.component.html
@@ -4,7 +4,7 @@
     <div class="row pad-all">
       <h4 class="title margin-left-right"> {{ document.name }} </h4>
       <div class="row pull-right margin-left-right">
-        <a class="btn btn-primary">View</a>
+        <a class="btn btn-primary" (click)='onView'>View</a>
         <a class="btn btn-info" style="margin-left:10px">Edit</a>
         <a class="btn btn-danger" style="margin-left:10px">Delete</a>
       </div>
