--- a/src/app/documents/document-list/document-list.component.html
+++ b/src/app/documents/document-list/document-list.component.html
@@ -3,14 +3,14 @@
     <div class="panel-heading">
       <div class="row pad-left-right">
         <span class="pull-left title">Documents</span>
-        <a class="btn btn-success pull-right">Add Document</a>
+        <a routerLink="/documents" class="btn btn-success pull-right">Add Document</a>
       </div>
     </div>
     <div class="panel-body">
       <div class="center-panel">
-        <app-document-item *ngFor="let documentEl of documents"
-        [document]="documentEl"
-        (documentSelected)="onDocumentSelected(documentEl)"></app-document-item>
+        <app-document-item *ngFor="let document of documents; let i = index"
+        [document]="document"
+        [index]="i"></app-document-item>
       </div>
     </div>
   </div>
