--- a/src/app/documents/documents.component.html
+++ b/src/app/documents/documents.component.html
@@ -3,8 +3,9 @@
     <app-document-list></app-document-list>
   </div>
   <div class="col-md-4">
-    <app-document-detail
+      <router-outlet></router-outlet>
+    <!-- <app-document-detail
     *ngIf="selectedDocument; else infoText"
-    [document]="selectedDocument"></app-document-detail>
+    [document]="selectedDocument"></app-document-detail> -->
   </div>
 </div>
