--- a/src/app/messages/message-list/message-list.component.html
+++ b/src/app/messages/message-list/message-list.component.html
@@ -9,15 +9,14 @@
       <div class="pannel-body">
         <div class="row">
           <div class="col-sx-12">
-              <app-message-item 
+              <app-message-item
         *ngFor="let message of messages"
         [message]="message"></app-message-item>
           </div>
         </div>
       </div>
       <div class="panel-footer">
-        <app-message-edit
-        (addMessageEvent)="onAddMessage($event)"></app-message-edit>
+        <app-message-edit></app-message-edit>
       </div>
     </div>
   </div>
