--- a/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/src/app/contacts/contact-detail/contact-detail.component.html
@@ -6,8 +6,8 @@
         <div class="col-xs-5">
           <img [src]="contact.imageUrl" alt="{{ contact.name }}" class="img-responsive">
           <div class="">
-          <button class="btn btn-danger pull-right" style="margin-right:150px">Delete</button>
-          <button class="btn btn-primary pull-right" style="margin-right:10px">Edit</button>
+          <a class="btn btn-danger pull-right" style="margin-right:150px" (click)="onDelete()">Delete</a>
+          <a [routerLink]="['edit']" class="btn btn-primary pull-right" style="margin-right:10px">Edit</a>
         </div>
         </div>
       </div>
