--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -4,10 +4,7 @@
       <app-contact-list></app-contact-list>
     </div>
     <div class="col-md-5">
-      <!-- <router-outlet></router-outlet> -->
-      <app-contact-detail
-      *ngIf="selectedContact; else infoText"
-      [contact]="selectedContact"></app-contact-detail>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
