--- a/src/app/documents/document-item/document-item.component.html
+++ b/src/app/documents/document-item/document-item.component.html
@@ -1,4 +1,5 @@
-<div routerLinkActive="active"><a [routerLink]="[index]" 
-class="list-group-item clearfix documentDiv">
+<div>
+  <a [routerLink]="[index]" 
+class="list-group-item clearfix documentDiv" routerLinkActive="active">
   {{ document.name }}
 </a></div>
