--- a/src/app/contacts/contact-item/contact-item.component.html
+++ b/src/app/contacts/contact-item/contact-item.component.html
@@ -1,5 +1,6 @@
 
-<a [routerLink]="[index]" class="list-group-item clearfix"
+<a 
+class="list-group-item clearfix" [routerLink]="[index]"
 (click)="onSelected()" >
   <div class="pull-left">
     <h4 [routerLink]="id" class="list-group-item-heading" >{{ contact.name }}</h4>
