--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -2,7 +2,7 @@
   <div class="panel-heading">
     <div class="row">
       <div class="col-xs-12">
-        <h3>Contacts<button class="btn btn-success pull-right">New User</button></h3>
+        <h3>Contacts<button class="btn btn-success pull-right" [routerLink]="['new']">New Contact</button></h3>
       </div>
     </div>
   </div>
@@ -11,7 +11,11 @@
       <div class="row">
         <div class="col-xs-12">
            <app-contact-item *ngFor="let contactEl of contacts" 
-           [contact]="contactEl"></app-contact-item>
+           [contact]="contactEl"
+           dnd-draggable 
+           [dragEnabled]="true" 
+           [dragData]="contactD" 
+           [dropZones]="['contactGroup']"></app-contact-item>
         </div>
       </div>
     </div>
