--- a/src/app/documents/document-edit/document-edit.component.html
+++ b/src/app/documents/document-edit/document-edit.component.html
@@ -1,3 +1,81 @@
-<p>
-  document-edit works!
-</p>
+<div class="panel panel-default">
+  <div class="panel-body">
+    <form id="contact-edit"
+    #myForm="ngForm"
+          (ngSubmit)="onSubmit(myForm)">
+      <div class="row">
+        <div class="col-sm-12 form-group">
+          <label for="name">Name</label>
+
+          <input 
+          name="title"
+          type="text" 
+          id="name" 
+          class="form-control required" size="120" max="120"
+          [ngModel]="originalDocument?.name"
+          required
+          #title>
+        </div>
+
+        <div class="col-sm-12 form-group">
+          <label for="email">Email</label>
+          <input 
+          name="description"
+          type="text" 
+          id="email" 
+          class="form-control required" size="120" max="255"
+          [ngModel]="originalDocument?.description">
+        </div>
+
+        <div class="col-sm-12 form-group">
+          <label for="phone">Phone</label>
+          <input 
+          name="phone"
+          type="text" 
+          id="phone" 
+          class="form-control invalid" size="150" max="255"
+          [ngModel]="originalDocument?.phone">
+
+        </div>
+
+        <div class="col-sm-12 form-group">
+          <label for="imageUrl">Image URL</label>
+          <input 
+          name="url"
+          type="text" 
+          id="imageUrl" 
+          class="form-control" size="150" max="255"
+          [ngModel]="originalDocument?.url"
+            required
+            documentUrl>
+        </div>
+      </div>
+      <div class="alert alert-danger" *ngIf="!myForm.valid">
+        The Document Title and URL are required fields.
+      </div>
+
+      <div class="form-group">
+        <!-- <label for="groupList">Group contacts</label> -->
+
+        <div class="row" id="groupList" style="min-height: 3rem;">
+
+          <div *ngFor="let contact of groupContacts; let i = index">
+            <div>
+              <app-contact-item class="col-sm-11" [contact]="contact"></app-contact-item>
+              <button class="btn btn-danger col-sm-2 deleteButton" (click)="onRemoveItem(i)">X</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="row">
+        <div class="col-xs-12">
+          <button class="btn btn-success" type="submit" [disabled]="!myForm.valid">Save</button>
+          <button class="btn btn-primary" type="button" (click)="onCancel()">Cancel</button>
+        </div>
+      </div>
+
+    </form>
+  </div>
+</div>
