--- a/src/app/contacts/contact-item/contact-item.component.html
+++ b/src/app/contacts/contact-item/contact-item.component.html
@@ -1,9 +1,7 @@
 
-<a 
-class="list-group-item clearfix" [routerLink]="[index]"
-(click)="onSelected()" >
+<a class="list-group-item clearfix" [routerLink]="[contact.id]" routerLinkActive="active">
   <div class="pull-left">
-    <h4 [routerLink]="id" class="list-group-item-heading" >{{ contact.name }}</h4>
+    <h4 class="list-group-item-heading" >{{ contact?.name }}</h4>
   </div>
   <span class="pull-right">
     <img src="{{ contact.imageUrl }}" alt="" class="{{ contact.name }}" style="max-height: 80px;">
