--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -1,8 +1,19 @@
 <div class="panel panel-default">
+  
   <div class="panel-heading">
     <div class="row">
-      <div class="col-xs-12">
-        <h3>Contacts<button class="btn btn-success pull-right" [routerLink]="['new']">New Contact</button></h3>
+      <span class="title pad-left-right">Contacts</span>
+    </div>
+    <div class="row">
+      <div class="input-group pull-left pad-left-right col-xs-7">
+        
+        <!-- Add the search box input field here -->
+        <input type="text" #searchBox class="form-control" placeholder="Enter search value" (keyup)="onKeyPress(searchBox.value)">
+        <div class="glyphicon glyphicon glyphicon-search input-group-addon" (click)="search(searchBox.value)"></div>
+
+      </div>
+      <div class="pull-right pad-left-right">
+        <a class="btn btn-success" [routerLink]="['new']">New Contact</a>
       </div>
     </div>
   </div>
@@ -10,7 +21,7 @@
     <div class="container" class="col-xs-12">
       <div class="row">
         <div class="col-xs-12">
-           <app-contact-item *ngFor="let contactEl of contacts" 
+           <app-contact-item *ngFor="let contactEl of contacts | contactsFilter:term" 
            [contact]="contactEl"
            dnd-draggable 
            [dragEnabled]="true" 
