--- a/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/src/app/contacts/contact-detail/contact-detail.component.html
@@ -1,17 +1,15 @@
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h1>{{ contacts.name }}</h1>
+    <h1>{{ contact.name }}</h1>
     <div class="container">
       <div class="row">
         <div class="col-xs-5">
-          <img [src]="contacts?.imageUrl" 
+          <img [src]="contact.imageUrl" 
           alt="{{ contact.name }}" 
           class="img-responsive">
           <div>
-          <a (click)="onDelete()" class="btn btn-danger pull-right" 
-          style="margin-right:150px">Delete</a>
-          <a [routerLink]="['edit']" class="btn btn-primary pull-right" 
-          style="margin-right:10px">Edit</a>
+          <a (click)="onDelete()" class="btn btn-danger pull-right" style="margin-right:50px">Delete</a>
+          <a [routerLink]="['edit']" class="btn btn-primary pull-right" style="margin-right:10px">Edit</a>
         </div>
         </div>
       </div>
