--- a/src/app/contacts/contact-edit/contact-edit.component.html
+++ b/src/app/contacts/contact-edit/contact-edit.component.html
@@ -1,89 +1,52 @@
 <div class="panel panel-default">
   <div class="panel-body">
-    <form id="contact-edit"
-          #myContactForm="ngForm"
-          (ngSubmit)="onSubmit(myContactForm)">
+    <form id="contact-edit" #myContactForm="ngForm" (ngSubmit)="onSubmit(myContactForm)">
       <div class="row">
         <div class="col-sm-12 form-group">
           <label for="name">Name</label>
 
-          <input
-            name="name"
-            type="text"
-            id="name"
-            class="form-control required"
-            size="120"
-            max="120"
-            [ngModel]="contact?.name"
-            required
-            #name="ngModel">
+          <input name="name" type="text" id="name" class="form-control required" size="120" max="120" [ngModel]="contact?.name"
+            required #name="ngModel">
         </div>
 
         <div class="col-sm-12 form-group">
           <label for="email">Email</label>
-          <input
-            name="email"
-            type="text"
-            id="email"
-            class="form-control required"
-            size="120"
-            max="255"
-            [ngModel]="contact?.email"
-            required
-            #email="ngModel"
-            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$">
+          <input name="email" type="text" id="email" class="form-control required" size="120" max="255" [ngModel]="contact?.email"
+            required #email="ngModel" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$">
           <div class="alert alert-danger" *ngIf="!email.valid && email.dirty">
             Enter a valid email address.
-        </div>
+          </div>
         </div>
 
         <div class="col-sm-12 form-group">
           <label for="phone">Phone</label>
-          <input
-            name="phone"
-            type="text"
-            id="phone"
-            class="form-control invalid"
-            size="150"
-            max="255"
-            [ngModel]="contact?.phone"
-            pattern="\D*([2-9]\d{2})(\D*)([2-9]\d{2})(\D*)(\d{4})\D*"
-            #phone="ngModel">
+          <input name="phone" type="text" id="phone" class="form-control invalid" size="150" max="255" [ngModel]="contact?.phone"
+            pattern="\D*([2-9]\d{2})(\D*)([2-9]\d{2})(\D*)(\d{4})\D*" #phone="ngModel">
           <div class="alert alert-danger" *ngIf="!phone.valid && phone.dirty">
             Enter a valid phone number.
-            </div>
+          </div>
         </div>
 
         <div class="col-sm-12 form-group">
           <label for="imageUrl">Image URL</label>
-          <input
-            name="imageUrl"
-            type="text"
-            id="imageUrl"
-            class="form-control"
-            size="150"
-            max="255"
-            [ngModel]="contact?.imageUrl">
+          <input name="imageUrl" type="text" id="imageUrl" class="form-control" size="150" max="255" [ngModel]="contact?.imageUrl">
         </div>
       </div>
 
-      <div class="alert alert-danger"
-      *ngIf="(!name.valid && !name.touched) || (!email.valid && !email.touched)">
-   The Name and Email fields are required.
- </div>
+      <div class="alert alert-danger" *ngIf="(!name.valid && !name.touched) || (!email.valid && !email.touched)">
+        The Name and Email fields are required.
+      </div>
 
 
       <div class="form-group">
         <label for="groupList">Group contacts</label>
 
-        <div class="alert alert-danger"
-             *ngIf="invalidGroupContact">
+        <div class="alert alert-danger" *ngIf="invalidGroupContact">
           Contact can not be added to the group. It is already in group or is the current contact.
         </div>
 
-        <div class="row" id="groupList"
-        style="min-height: 3rem;" 
-        dnd-droppable [dropZones]="['contactGroup']" (onDropSuccess)="addToGroup($event)">
+        <div class="row" id="groupList" style="min-height: 3rem;" dnd-droppable [dropZones]="['contactGroup']"
+          (onDropSuccess)="addToGroup($event)">
 
           <div *ngFor="let contact of groupContacts; let i = index">
             <div>
