--- a/src/app/messages/message-item/message-item.component.html
+++ b/src/app/messages/message-item/message-item.component.html
@@ -1,8 +1,8 @@
 <a class="list-group-item clearfix">
   <div>
-  <div class="row">
+  <div class="">
     <span class="messageHeader">{{ messageSender }}</span>
   </div>
-    <div class="messageText">{{ message?.msgText }}</div>
+    <div class="messageText">{{ message.msgText }}</div>
   </div> 
 </a>
